--- a/POSMOVIL/cortes_pendientes.html
+++ b/POSMOVIL/cortes_pendientes.html
@@ -379,7 +379,11 @@ async function generarImagenMapa(ventas) {
   }).setView([25.5, -99.56], 12);
 
   // 🔹 Usamos mapa libre sin CORS
-  L.tileLayer("https://tile.openstreetmap.org/{z}/{x}/{y}.png", {
+  L.tileLayer("https://{s}.tile.opentopomap.org/{z}/{x}/{y}.png", {
+  maxZoom: 17,
+  crossOrigin: true
+});
+
     maxZoom: 19,
     crossOrigin: true
   }).addTo(map);
