--- a/POSMOVIL/cortes_pendientes.html
+++ b/POSMOVIL/cortes_pendientes.html
@@ -369,6 +369,7 @@ await enviarPDFaTelegram(
   await cargarDepartamentos();
   await cargarRutas();
 });
+
 async function generarImagenMapa(ventas) {
   const divMapa = document.getElementById("mapaCorte");
   divMapa.style.display = "block";
@@ -378,13 +379,9 @@ async function generarImagenMapa(ventas) {
     attributionControl: false
   }).setView([25.5, -99.56], 12);
 
-  // 🔹 Usamos mapa libre sin CORS
+  // 🔹 Servidor con CORS abierto
   L.tileLayer("https://{s}.tile.opentopomap.org/{z}/{x}/{y}.png", {
-  maxZoom: 17,
-  crossOrigin: true
-});
-
-    maxZoom: 19,
+    maxZoom: 17,
     crossOrigin: true
   }).addTo(map);
 
@@ -411,19 +408,20 @@ async function generarImagenMapa(ventas) {
     map.setView(puntos[0], 14);
   }
 
+  // Espera para asegurar carga de tiles
   await new Promise(r => setTimeout(r, 2500));
   let dataUrl;
 
   try {
     dataUrl = await domtoimage.toPng(divMapa, { quality: 0.95, bgcolor: "#fff" });
   } catch (err) {
-    console.warn("⚠️ No se pudo capturar el mapa (CORS), usando fondo vacío.");
+    console.warn("⚠️ No se pudo capturar el mapa (CORS), generando versión simple.");
     const canvas = document.createElement("canvas");
     canvas.width = 600; canvas.height = 400;
     const ctx = canvas.getContext("2d");
     ctx.fillStyle = "#fff"; ctx.fillRect(0, 0, 600, 400);
     ctx.fillStyle = "#333";
-    ctx.fillText("MAPA NO DISPONIBLE", 200, 200);
+    ctx.fillText("MAPA NO DISPONIBLE", 180, 200);
     dataUrl = canvas.toDataURL("image/png");
   }
 
@@ -433,6 +431,7 @@ async function generarImagenMapa(ventas) {
   console.log("🗺️ Mapa generado correctamente con", puntos.length, "puntos.");
   return dataUrl;
 }
+
 // === 📊 Generar imagen de gráfica por departamento ===
 async function generarImagenGraficaDeptos(porDepto) {
   const divGrafica = document.getElementById("graficaDeptos");
