--- a/POSMOVIL/cortes_pendientes.html
+++ b/POSMOVIL/cortes_pendientes.html
@@ -51,8 +51,6 @@
     .modal-actions { margin-top:15px; text-align:right; }
   </style>
 <!-- 🌍 Librerías para mapa y captura de imagen -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@3.3.0/dist/dom-to-image-more.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
@@ -151,6 +149,7 @@ document.addEventListener("DOMContentLoaded", async () => {
     });
   }
 
+  // 🔹 Cargar pendientes por ruta
   async function cargarPendientes(rutaId) {
     tbody.innerHTML = "<tr><td colspan='5'>Buscando ventas...</td></tr>";
     const qVentas = query(collection(db, "rutas_venta"), where("rutaId", "==", rutaId), where("cortado", "==", false));
@@ -191,138 +190,85 @@ document.addEventListener("DOMContentLoaded", async () => {
 
   btnCancelar.onclick = () => (modal.style.display = "none");
 
-btnConfirmar.onclick = async () => {
-  if (!corteActual) return;
-  const { rutaId, resumen } = corteActual;
-  btnConfirmar.disabled = true;
-  btnConfirmar.textContent = "Cortando...";
+  // === CONFIRMAR CORTE ===
+  btnConfirmar.onclick = async () => {
+    if (!corteActual) return;
+    const { rutaId, resumen } = corteActual;
+    btnConfirmar.disabled = true;
+    btnConfirmar.textContent = "Cortando...";
 
-  // 🔹 Marcar ventas como cortadas
-  const qVentas = query(
-    collection(db, "rutas_venta"),
-    where("rutaId", "==", rutaId),
-    where("cortado", "==", false)
-  );
-  const snap = await getDocs(qVentas);
-  const ventas = snap.docs.map(d => ({ id: d.id, ...d.data() }));
-  for (const d of snap.docs) await updateDoc(doc(db, "rutas_venta", d.id), { cortado: true });
-// 🔹 Construir ventas_incluidas con los datos clave de cada venta
-const ventas_incluidas = ventas.map(v => ({
-  idVenta: v.folio || v.id,
-  total: v.total || 0,
-  cliente: v.cliente || "PUBLICO EN GENERAL",
-  metodo_pago: v.metodo_pago || "efectivo",
-  fecha_txt: v.fecha_txt || "",
-  ubicacion: v.ubicacion || null,
-  resumen_deptos: (() => {
-    const porDepto = {};
-    for (const det of (v.detalle || [])) {
-      const depId = det.departamento_id?.toString() || "0";
-      const depInfo = mapaDepartamentos[depId] || { nombre: "SIN DEPTO" };
-      const nombre = depInfo.nombre;
-      const importe = det.importe || (det.precioVenta * det.cantidad) || 0;
-      porDepto[nombre] = (porDepto[nombre] || 0) + importe;
+    // 🔹 Marcar ventas como cortadas
+    const qVentas = query(collection(db, "rutas_venta"), where("rutaId", "==", rutaId), where("cortado", "==", false));
+    const snap = await getDocs(qVentas);
+    const ventas = snap.docs.map(d => ({ id: d.id, ...d.data() }));
+    for (const d of snap.docs) await updateDoc(doc(db, "rutas_venta", d.id), { cortado: true });
+
+    // 🔹 Guardar resumen completo en Firestore
+    await addDoc(collection(db, "cortes_globales"), {
+      rutaId,
+      fecha: serverTimestamp(),
+      creado_en: new Date().toISOString(),
+      realizado_por: "Administrador",
+      total_registros: ventas.length,
+      resumen
+    });
+
+    // === PDF ===
+    const { jsPDF } = window.jspdf;
+    const pdf = new jsPDF();
+    pdf.setFont("helvetica", "bold");
+    pdf.setFontSize(16);
+    pdf.text(`CORTE DE RUTA – ${rutaId}`, 10, 15);
+
+    pdf.setFont("helvetica", "normal");
+    pdf.setFontSize(12);
+    pdf.text(`Fecha: ${new Date().toLocaleString()}`, 10, 25);
+    pdf.text(`Total del día: $${resumen.totalDia.toFixed(2)}`, 10, 35);
+    pdf.text(`Tickets: ${resumen.totalTickets}`, 10, 43);
+
+    pdf.setFont("helvetica", "bold");
+    pdf.text("Métodos de Pago:", 10, 55);
+    pdf.setFont("helvetica", "normal");
+    let y = 63;
+    for (const [met, val] of Object.entries(resumen.porMetodo)) {
+      pdf.text(`${met}: $${val.toFixed(2)}`, 12, y);
+      y += 7;
     }
-    return porDepto;
-  })()
-}));
 
-// 🔹 Guardar resumen + detalle completo en Firestore
-const corteRef = await addDoc(collection(db, "cortes_globales"), {
-  rutaId,
-  fecha: serverTimestamp(),
-  creado_en: new Date().toISOString(),
-  realizado_por: "Administrador",
-  version: "1.0.3",
-  total_registros: ventas_incluidas.length,
-  resumen,
-  ventas_incluidas
-});
+    pdf.addPage();
+    pdf.setFont("helvetica", "bold");
+    pdf.setFontSize(14);
+    pdf.text("📊 DISTRIBUCIÓN POR DEPARTAMENTO", 10, 20);
 
-// 🔹 Crear PDF con jsPDF
-const { jsPDF } = window.jspdf;
-const pdf = new jsPDF();
+    try {
+      const imgGraf = await generarImagenGraficaDeptos(resumen.porDepto);
+      if (imgGraf) pdf.addImage(imgGraf, "PNG", 10, 30, 180, 120);
+    } catch (err) {
+      console.error("⚠️ Error generando gráfica:", err);
+    }
 
-// === 🧾 HOJA 1: RESUMEN + DETALLE ===
-pdf.setFont("helvetica", "bold");
-pdf.text(`REPORTE DE CORTE – ${rutaId}`, 10, 15);
-pdf.setFont("helvetica", "normal");
-pdf.text(`Fecha: ${new Date().toLocaleString()}`, 10, 25);
-pdf.text(`Total del día: $${resumen.totalDia.toFixed(2)}`, 10, 35);
-pdf.text(`Tickets: ${resumen.totalTickets}`, 10, 43);
+    pdf.setFontSize(10);
+    pdf.text("Gráfica generada automáticamente por PROVSOFT POS", 10, 160);
 
-// 🔹 Desglose por departamento
-pdf.setFont("helvetica", "bold");
-pdf.text("Por Departamento:", 10, 55);
-pdf.setFont("helvetica", "normal");
-let y = 63;
-for (const [dep, val] of Object.entries(resumen.porDepto)) {
-  if (y > 260) break; // Evita desbordar
-  pdf.text(`${dep}: $${val.toFixed(2)}`, 12, y);
-  y += 7;
-}
+    const fecha = new Date().toISOString().slice(0,10);
+    const nombreArchivo = `Corte_${rutaId}_${fecha}.pdf`;
+    const pdfBlob = pdf.output("blob");
+    pdf.save(nombreArchivo);
 
-// 🔹 Métodos de pago
-y += 8;
-pdf.setFont("helvetica", "bold");
-pdf.text("Por Método de Pago:", 10, y);
-pdf.setFont("helvetica", "normal");
-y += 8;
-for (const [met, val] of Object.entries(resumen.porMetodo)) {
-  pdf.text(`${met}: $${val.toFixed(2)}`, 12, y);
-  y += 7;
-}
+    // === ENVIAR A TELEGRAM ===
+    await enviarPDFaTelegram(
+      pdfBlob,
+      nombreArchivo,
+      `📦 *Corte generado*\nRuta: ${rutaId}\nTotal: $${resumen.totalDia.toFixed(2)}\nTickets: ${resumen.totalTickets}\nFecha: ${new Date().toLocaleString()}`
+    );
 
-// === 🗺️ HOJA 2: MAPA DE RUTA ===
-pdf.addPage();
-pdf.setFont("helvetica", "bold");
-pdf.setFontSize(14);
-pdf.text("📍 RUTA DE VENTAS DEL DÍA", 10, 20);
-try {
-  const imgMapa = await generarImagenMapa(ventas);
-  if (imgMapa) pdf.addImage(imgMapa, "PNG", 10, 30, 180, 120);
-} catch (err) {
-  console.error("⚠️ Error generando mapa:", err);
-}
-pdf.setFontSize(10);
-pdf.text("Mapa generado automáticamente por PROVSOFT POS", 10, 160);
+    alert("✅ Corte realizado y PDF enviado a Telegram.");
+    modal.style.display = "none";
+    selectRuta.value = "";
+    tbody.innerHTML = "<tr><td colspan='5'>Selecciona una ruta...</td></tr>";
+  };
 
-// === 📊 HOJA 3: GRÁFICA POR DEPARTAMENTO ===
-pdf.addPage();
-pdf.setFont("helvetica", "bold");
-pdf.setFontSize(14);
-pdf.text("📊 DISTRIBUCIÓN POR DEPARTAMENTO", 10, 20);
-try {
-  const imgGraf = await generarImagenGraficaDeptos(resumen.porDepto);
-  if (imgGraf) pdf.addImage(imgGraf, "PNG", 10, 30, 180, 120);
-} catch (err) {
-  console.error("⚠️ Error generando gráfica:", err);
-}
-pdf.setFontSize(10);
-pdf.text("Gráfica generada automáticamente por PROVSOFT POS", 10, 160);
-  
-// 💾 Guardar PDF local
-const fecha = new Date().toISOString().slice(0,10);
-const nombreArchivo = `Corte_${rutaId}_${fecha}.pdf`;
-const pdfBlob = pdf.output("blob");
-
-// 💾 Guarda localmente (si quieres)
-pdf.save(nombreArchivo);
-
-// 📨 Enviar a Telegram
-await enviarPDFaTelegram(
-  pdfBlob,
-  nombreArchivo,
-  `📦 *Corte generado*\nRuta: ${rutaId}\nTotal: $${resumen.totalDia.toFixed(2)}\nTickets: ${resumen.totalTickets}\nFecha: ${new Date().toLocaleString()}`
-);
-
-
-  alert("✅ Corte realizado y PDF generado con mapa de ruta.");
-  modal.style.display = "none";
-  selectRuta.value = "";
-  tbody.innerHTML = "<tr><td colspan='5'>Selecciona una ruta...</td></tr>";
-};
-
+  // === MOSTRAR RESUMEN ===
   async function mostrarResumenCorte(rutaId) {
     contenido.innerHTML = "Generando resumen...";
     modal.style.display = "flex";
@@ -349,9 +295,7 @@ await enviarPDFaTelegram(
     }
 
     const totalTickets = ventas.length;
-    const totalEfectivo = porMetodo.efectivo || 0;
-    const totalCredito = porMetodo.tarjeta || 0;
-    corteActual.resumen = { totalDia, totalTickets, totalEfectivo, totalCredito, porMetodo, porDepto };
+    corteActual.resumen = { totalDia, totalTickets, porMetodo, porDepto };
 
     let html = `<h3>Total del día: $${totalDia.toFixed(2)}</h3>`;
     html += `<p>Tickets: ${totalTickets}</p>`;
@@ -369,68 +313,6 @@ await enviarPDFaTelegram(
   await cargarDepartamentos();
   await cargarRutas();
 });
-
-async function generarImagenMapa(ventas) {
-  const divMapa = document.getElementById("mapaCorte");
-  divMapa.style.display = "block";
-
-  const map = L.map(divMapa, {
-    zoomControl: false,
-    attributionControl: false
-  }).setView([25.5, -99.56], 12);
-
-  // 🔹 Servidor con CORS abierto
-  L.tileLayer("https://{s}.tile.opentopomap.org/{z}/{x}/{y}.png", {
-    maxZoom: 17,
-    crossOrigin: true
-  }).addTo(map);
-
-  const puntos = [];
-
-  for (const v of ventas) {
-    if (!v.ubicacion?.lat || !v.ubicacion?.lon) continue;
-    const { lat, lon } = v.ubicacion;
-    const total = (v.total || 0).toFixed(2);
-    const cliente = v.cliente || "Mostrador";
-    L.circleMarker([lat, lon], {
-      radius: 6,
-      color: "#00416A",
-      fillColor: "#0c6cbd",
-      fillOpacity: 0.8
-    }).addTo(map).bindTooltip(`${cliente} – $${total}`, { permanent: false });
-    puntos.push([lat, lon]);
-  }
-
-  if (puntos.length > 1) {
-    const poly = L.polyline(puntos, { color: "#0c6cbd", weight: 3 }).addTo(map);
-    map.fitBounds(poly.getBounds(), { padding: [40, 40] });
-  } else if (puntos.length === 1) {
-    map.setView(puntos[0], 14);
-  }
-
-  // Espera para asegurar carga de tiles
-  await new Promise(r => setTimeout(r, 2500));
-  let dataUrl;
-
-  try {
-    dataUrl = await domtoimage.toPng(divMapa, { quality: 0.95, bgcolor: "#fff" });
-  } catch (err) {
-    console.warn("⚠️ No se pudo capturar el mapa (CORS), generando versión simple.");
-    const canvas = document.createElement("canvas");
-    canvas.width = 600; canvas.height = 400;
-    const ctx = canvas.getContext("2d");
-    ctx.fillStyle = "#fff"; ctx.fillRect(0, 0, 600, 400);
-    ctx.fillStyle = "#333";
-    ctx.fillText("MAPA NO DISPONIBLE", 180, 200);
-    dataUrl = canvas.toDataURL("image/png");
-  }
-
-  map.remove();
-  divMapa.style.display = "none";
-
-  console.log("🗺️ Mapa generado correctamente con", puntos.length, "puntos.");
-  return dataUrl;
-}
 
 // === 📊 Generar imagen de gráfica por departamento ===
 async function generarImagenGraficaDeptos(porDepto) {
@@ -454,38 +336,22 @@ async function generarImagenGraficaDeptos(porDepto) {
       }]
     },
     options: {
-      plugins: {
-        legend: { position: "right" },
-        title: {
-          display: true,
-          text: "Distribución por Departamento",
-          font: { size: 16 }
-        }
-      },
+      plugins: { legend: { position: "right" } },
       animation: false
     }
   });
 
-  await new Promise(r => setTimeout(r, 1500)); // espera a renderizar
-  chart.resize(); // fuerza layout completo
-
-  let dataUrl;
-  try {
-    dataUrl = await domtoimage.toPng(divGrafica, { quality: 0.95, bgcolor: "#fff" });
-  } catch (err) {
-    console.warn("⚠️ No se pudo generar imagen de gráfica:", err);
-  }
-
+  await new Promise(r => setTimeout(r, 1200));
+  let dataUrl = await domtoimage.toPng(divGrafica, { quality: 0.95, bgcolor: "#fff" });
   chart.destroy();
   divGrafica.style.display = "none";
-
-  console.log("📊 Gráfica de departamentos generada como imagen PNG");
   return dataUrl;
 }
+
 // === 📨 Enviar PDF del corte a Telegram ===
 async function enviarPDFaTelegram(pdfBlob, nombreArchivo, resumenTexto) {
-  const BOT_TOKEN = "8272633411:AAE6uKTpEtPW--IPk6ufix_CDGJ0dH6ru4Q"; // tu token
-  const CHAT_ID   = "6617988297"; // tu chat_id
+  const BOT_TOKEN = "8272633411:AAE6uKTpEtPW--IPk6ufix_CDGJ0dH6ru4Q";
+  const CHAT_ID   = "6617988297";
 
   const formData = new FormData();
   formData.append("chat_id", CHAT_ID);
@@ -503,7 +369,6 @@ async function enviarPDFaTelegram(pdfBlob, nombreArchivo, resumenTexto) {
     console.error("⚠️ Error enviando a Telegram:", err);
   }
 }
-
 </script>
 </body>
 </html>
