--- a/POSMOVIL/cortes_pendientes.html
+++ b/POSMOVIL/cortes_pendientes.html
@@ -213,54 +213,72 @@ document.addEventListener("DOMContentLoaded", async () => {
       resumen
     });
 
-    // === PDF ===
-    const { jsPDF } = window.jspdf;
-    const pdf = new jsPDF();
-    pdf.setFont("helvetica", "bold");
-    pdf.setFontSize(16);
-    pdf.text(`CORTE DE RUTA – ${rutaId}`, 10, 15);
+// === PDF compacto en una sola hoja ===
+const { jsPDF } = window.jspdf;
+const pdf = new jsPDF();
 
-    pdf.setFont("helvetica", "normal");
-    pdf.setFontSize(12);
-    pdf.text(`Fecha: ${new Date().toLocaleString()}`, 10, 25);
-    pdf.text(`Total del día: $${resumen.totalDia.toFixed(2)}`, 10, 35);
-    pdf.text(`Tickets: ${resumen.totalTickets}`, 10, 43);
+// Encabezado compacto
+pdf.setFont("helvetica", "bold");
+pdf.setFontSize(14);
+pdf.text(`CORTE DE RUTA – ${rutaId}`, 10, 15);
 
-    pdf.setFont("helvetica", "bold");
-    pdf.text("Métodos de Pago:", 10, 55);
-    pdf.setFont("helvetica", "normal");
-    let y = 63;
-    for (const [met, val] of Object.entries(resumen.porMetodo)) {
-      pdf.text(`${met}: $${val.toFixed(2)}`, 12, y);
-      y += 7;
-    }
+pdf.setFont("helvetica", "normal");
+pdf.setFontSize(10);
+pdf.text(`Fecha: ${new Date().toLocaleString()}`, 10, 22);
+pdf.text(`Total del día: $${resumen.totalDia.toFixed(2)}`, 10, 28);
+pdf.text(`Tickets: ${resumen.totalTickets}`, 10, 34);
 
-    pdf.addPage();
-    pdf.setFont("helvetica", "bold");
-    pdf.setFontSize(14);
-    pdf.text("📊 DISTRIBUCIÓN POR DEPARTAMENTO", 10, 20);
+// Métodos de Pago
+pdf.setFont("helvetica", "bold");
+pdf.text("Métodos de Pago:", 10, 42);
+pdf.setFont("helvetica", "normal");
+let y = 48;
+for (const [met, val] of Object.entries(resumen.porMetodo)) {
+  pdf.text(`${met}: $${val.toFixed(2)}`, 12, y);
+  y += 5;
+}
 
-    try {
-      const imgGraf = await generarImagenGraficaDeptos(resumen.porDepto);
-      if (imgGraf) pdf.addImage(imgGraf, "PNG", 10, 30, 180, 120);
-    } catch (err) {
-      console.error("⚠️ Error generando gráfica:", err);
-    }
+// Totales por Departamento
+y += 4;
+pdf.setFont("helvetica", "bold");
+pdf.text("Totales por Departamento:", 10, y);
+pdf.setFont("helvetica", "normal");
+y += 5;
 
-    pdf.setFontSize(10);
-    pdf.text("Gráfica generada automáticamente por PROVSOFT POS", 10, 160);
+const deptos = Object.entries(resumen.porDepto);
+for (const [dep, val] of deptos) {
+  if (y > 210) break; // límite de página
+  pdf.text(`${dep}: $${val.toFixed(2)}`, 12, y);
+  y += 5;
+}
 
-    const fecha = new Date().toISOString().slice(0,10);
-    const nombreArchivo = `Corte_${rutaId}_${fecha}.pdf`;
-    const pdfBlob = pdf.output("blob");
-    pdf.save(nombreArchivo);
+// Gráfica compacta
+y += 6;
+try {
+  const imgGraf = await generarImagenGraficaDeptos(resumen.porDepto);
+  if (imgGraf) {
+    pdf.addImage(imgGraf, "PNG", 105, 45, 90, 70); // lado derecho, pequeña
+  }
+} catch (err) {
+  console.error("⚠️ Error generando gráfica:", err);
+}
 
-    // === ENVIAR A TELEGRAM ===
-    await enviarPDFaTelegram(
-      pdfBlob,
-      nombreArchivo,
-      `📦 *Corte generado*\nRuta: ${rutaId}\nTotal: $${resumen.totalDia.toFixed(2)}\nTickets: ${resumen.totalTickets}\nFecha: ${new Date().toLocaleString()}`
-    );
+// Pie
+pdf.setFontSize(8);
+pdf.text("Reporte generado automáticamente por PROVSOFT POS", 10, 285);
+
+// Guardar y enviar
+const fecha = new Date().toISOString().slice(0,10);
+const nombreArchivo = `Corte_${rutaId}_${fecha}.pdf`;
+const pdfBlob = pdf.output("blob");
+pdf.save(nombreArchivo);
+
+await enviarPDFaTelegram(
+  pdfBlob,
+  nombreArchivo,
+  `📦 *Corte generado*\nRuta: ${rutaId}\nTotal: $${resumen.totalDia.toFixed(2)}\nTickets: ${resumen.totalTickets}\nFecha: ${new Date().toLocaleString()}`
+);
+
 
     alert("✅ Corte realizado y PDF enviado a Telegram.");
     modal.style.display = "none";
