--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
   <div class="apps">
     <a href="POSMOVIL/RECORTES.html">🔎 Reimpresion de Cortes</a>
   </div>
+  <div class="apps">
+    <a href="POSMOVIL/POSICIONVTA.html">🔎 Trazado de Rutas </a>
+  </div>
 
   <footer>
     Powered by <b>PROVSOFT</b>
