--- a/POSMOVIL/cortes_pendientes.html
+++ b/POSMOVIL/cortes_pendientes.html
@@ -213,11 +213,11 @@ document.addEventListener("DOMContentLoaded", async () => {
       resumen
     });
 
-// === PDF compacto en una sola hoja ===
+// === PDF compacto en una sola hoja (con nombre del corte) ===
 const { jsPDF } = window.jspdf;
 const pdf = new jsPDF();
 
-// Encabezado compacto
+// Encabezado
 pdf.setFont("helvetica", "bold");
 pdf.setFontSize(14);
 pdf.text(`CORTE DE RUTA – ${rutaId}`, 10, 15);
@@ -225,14 +225,15 @@ pdf.text(`CORTE DE RUTA – ${rutaId}`, 10, 15);
 pdf.setFont("helvetica", "normal");
 pdf.setFontSize(10);
 pdf.text(`Fecha: ${new Date().toLocaleString()}`, 10, 22);
-pdf.text(`Total del día: $${resumen.totalDia.toFixed(2)}`, 10, 28);
-pdf.text(`Tickets: ${resumen.totalTickets}`, 10, 34);
+pdf.text(`Corte realizado por: ${resumen.nombreCorte || rutaId}`, 10, 28);
+pdf.text(`Total del día: $${resumen.totalDia.toFixed(2)}`, 10, 34);
+pdf.text(`Tickets: ${resumen.totalTickets}`, 10, 40);
 
 // Métodos de Pago
 pdf.setFont("helvetica", "bold");
-pdf.text("Métodos de Pago:", 10, 42);
+pdf.text("Métodos de Pago:", 10, 48);
 pdf.setFont("helvetica", "normal");
-let y = 48;
+let y = 54;
 for (const [met, val] of Object.entries(resumen.porMetodo)) {
   pdf.text(`${met}: $${val.toFixed(2)}`, 12, y);
   y += 5;
@@ -244,21 +245,17 @@ pdf.setFont("helvetica", "bold");
 pdf.text("Totales por Departamento:", 10, y);
 pdf.setFont("helvetica", "normal");
 y += 5;
-
-const deptos = Object.entries(resumen.porDepto);
-for (const [dep, val] of deptos) {
-  if (y > 210) break; // límite de página
+for (const [dep, val] of Object.entries(resumen.porDepto)) {
+  if (y > 210) break;
   pdf.text(`${dep}: $${val.toFixed(2)}`, 12, y);
   y += 5;
 }
 
 // Gráfica compacta
-y += 6;
+y = 45; // posición fija lateral derecha
 try {
   const imgGraf = await generarImagenGraficaDeptos(resumen.porDepto);
-  if (imgGraf) {
-    pdf.addImage(imgGraf, "PNG", 105, 45, 90, 70); // lado derecho, pequeña
-  }
+  if (imgGraf) pdf.addImage(imgGraf, "PNG", 110, y, 85, 70);
 } catch (err) {
   console.error("⚠️ Error generando gráfica:", err);
 }
@@ -278,7 +275,6 @@ await enviarPDFaTelegram(
   nombreArchivo,
   `📦 *Corte generado*\nRuta: ${rutaId}\nTotal: $${resumen.totalDia.toFixed(2)}\nTickets: ${resumen.totalTickets}\nFecha: ${new Date().toLocaleString()}`
 );
-
 
     alert("✅ Corte realizado y PDF enviado a Telegram.");
     modal.style.display = "none";
