--- a/POSMOVIL/cortes_pendientes.html
+++ b/POSMOVIL/cortes_pendientes.html
@@ -213,11 +213,11 @@ document.addEventListener("DOMContentLoaded", async () => {
       resumen
     });
 
-// === PDF compacto en una sola hoja (con nombre del corte) ===
+// === PDF compacto en una sola hoja ===
 const { jsPDF } = window.jspdf;
 const pdf = new jsPDF();
 
-// Encabezado
+// Encabezado compacto
 pdf.setFont("helvetica", "bold");
 pdf.setFontSize(14);
 pdf.text(`CORTE DE RUTA – ${rutaId}`, 10, 15);
@@ -225,15 +225,14 @@ pdf.text(`CORTE DE RUTA – ${rutaId}`, 10, 15);
 pdf.setFont("helvetica", "normal");
 pdf.setFontSize(10);
 pdf.text(`Fecha: ${new Date().toLocaleString()}`, 10, 22);
-pdf.text(`Corte realizado por: ${resumen.nombreCorte || rutaId}`, 10, 28);
-pdf.text(`Total del día: $${resumen.totalDia.toFixed(2)}`, 10, 34);
-pdf.text(`Tickets: ${resumen.totalTickets}`, 10, 40);
+pdf.text(`Total del día: $${resumen.totalDia.toFixed(2)}`, 10, 28);
+pdf.text(`Tickets: ${resumen.totalTickets}`, 10, 34);
 
 // Métodos de Pago
 pdf.setFont("helvetica", "bold");
-pdf.text("Métodos de Pago:", 10, 48);
+pdf.text("Métodos de Pago:", 10, 42);
 pdf.setFont("helvetica", "normal");
-let y = 54;
+let y = 48;
 for (const [met, val] of Object.entries(resumen.porMetodo)) {
   pdf.text(`${met}: $${val.toFixed(2)}`, 12, y);
   y += 5;
@@ -245,17 +244,21 @@ pdf.setFont("helvetica", "bold");
 pdf.text("Totales por Departamento:", 10, y);
 pdf.setFont("helvetica", "normal");
 y += 5;
-for (const [dep, val] of Object.entries(resumen.porDepto)) {
-  if (y > 210) break;
+
+const deptos = Object.entries(resumen.porDepto);
+for (const [dep, val] of deptos) {
+  if (y > 210) break; // límite de página
   pdf.text(`${dep}: $${val.toFixed(2)}`, 12, y);
   y += 5;
 }
 
 // Gráfica compacta
-y = 45; // posición fija lateral derecha
+y += 6;
 try {
   const imgGraf = await generarImagenGraficaDeptos(resumen.porDepto);
-  if (imgGraf) pdf.addImage(imgGraf, "PNG", 110, y, 85, 70);
+  if (imgGraf) {
+    pdf.addImage(imgGraf, "PNG", 105, 45, 90, 70); // lado derecho, pequeña
+  }
 } catch (err) {
   console.error("⚠️ Error generando gráfica:", err);
 }
@@ -275,6 +278,7 @@ await enviarPDFaTelegram(
   nombreArchivo,
   `📦 *Corte generado*\nRuta: ${rutaId}\nTotal: $${resumen.totalDia.toFixed(2)}\nTickets: ${resumen.totalTickets}\nFecha: ${new Date().toLocaleString()}`
 );
+
 
     alert("✅ Corte realizado y PDF enviado a Telegram.");
     modal.style.display = "none";
@@ -309,9 +313,7 @@ await enviarPDFaTelegram(
     }
 
     const totalTickets = ventas.length;
-    const nombreCorte = ventas[0]?.usuarioNombre || ventas[0]?.atendio || ventas[0]?.usuario || "Desconocido";
-corteActual.resumen = { totalDia, totalTickets, porMetodo, porDepto, nombreCorte };
-
+    corteActual.resumen = { totalDia, totalTickets, porMetodo, porDepto };
 
     let html = `<h3>Total del día: $${totalDia.toFixed(2)}</h3>`;
     html += `<p>Tickets: ${totalTickets}</p>`;
